--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "yup": "^1.4.0"
   }
 }
