--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-session": "^1.18.0",
+    "gridfs": "^1.0.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.2",
+    "mongoose-gridfs": "^1.3.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "pug": "^3.0.2",
     "session": "^0.1.0",
     "yup": "^1.4.0"
