--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1594.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
